--- a/views/admin/article.ejs
+++ b/views/admin/article.ejs
@@ -1,5 +1,108 @@
-<% include header %>
-  <% include left %>
+<!doctype html>
+<html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>后台管理</title>
+
+<link rel="stylesheet" href="/admin/css/reset.css" type="text/css" media="screen" />
+
+<link rel="stylesheet" href="/admin/css/style.css" type="text/css" media="screen" />
+<!-- Invalid Stylesheet. This makes stuff look pretty. Remove it if you want the CSS completely valid -->
+<link rel="stylesheet" href="/admin/css/invalid.css" type="text/css" media="screen" />
+
+<script type="text/javascript" src="/admin/js/jquery.min.js"></script>
+<!-- jQuery Configuration -->
+<script type="text/javascript" src="/admin/js/simpla.jquery.configuration.js"></script>
+<!-- Facebox jQuery Plugin -->
+<script type="text/javascript" src="/admin/js/facebox.js"></script>
+<!-- jQuery WYSIWYG Plugin -->
+<script type="text/javascript" src="/admin/js/jquery.wysiwyg.js"></script>
+<!-- jQuery Datepicker Plugin -->
+<script type="text/javascript" src="/admin/js/jquery.datePicker.js"></script>
+<script type="text/javascript" src="/admin/js/jquery.date.js"></script>
+</head>
+<body>
+<div id="body-wrapper">
+  <!-- Wrapper for the radial gradient background -->
+  <div id="sidebar">
+    <div id="sidebar-wrapper">
+      <!-- Sidebar with logo and menu -->
+      <h1 id="sidebar-title"><a href="#">管理面板</a></h1>
+      <!-- Logo (221px wide) -->
+      <a href="#"><img id="logo" src="/admin/images/logo.png"  /></a>
+      <!-- Sidebar Profile links -->
+      <div id="profile-links"> 欢迎, <a href="#" title="Edit your profile"> <%= username %> </a>, 你有 <a href="#messages" rel="modal" title="3">3 消息</a><br />
+        <br />
+        <a href="../">前台首页</a> | <a href="logout" title="注销">注销</a> </div>
+      <ul id="main-nav">
+        <!-- Accordion Menu -->
+        <li> <a href="#/" class="nav-top-item no-submenu">
+          <!-- Add the class "no-submenu" to menu items with no sub menu -->
+          控制面板 </a> </li>
+        <li> <a href="#" class="nav-top-item current">
+          <!-- Add the class "current" to current menu item -->
+          文 章 </a>
+          <ul>
+            <li><a href="#">添加文章</a></li>
+            <li><a class="current" href="#">管理文章</a></li>        
+            <li><a href="#">管理评论</a></li>
+            <li><a href="#">管理分类</a></li>
+          </ul>
+        </li>
+        <li> <a href="#" class="nav-top-item"> 页面 </a>
+          <ul>
+            <li><a href="#">创建页面</a></li>
+            <li><a href="#">管理页面</a></li>
+          </ul>
+        </li>
+        <li> <a href="#" class="nav-top-item"> 文件管理</a>
+          <ul>
+            <li><a href="#">图片上传</a></li>
+            <li><a href="#">相册管理</a></li>
+            <li><a href="#">图片管理</a></li>
+            <li><a href="#">相册设置</a></li>
+          </ul>
+        </li>
+      
+        <li> <a href="#" class="nav-top-item"> 系统设置 </a>
+          <ul>
+            <li><a href="#">基本设置</a></li>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">Your Profile</a></li>
+            <li><a href="#">用户管理</a></li>
+          </ul>
+        </li>
+      </ul>
+      <!-- End #main-nav -->
+      <div id="messages" style="display: none">
+        <!-- Messages are shown when a link with these attributes are clicked: href="#messages" rel="modal"  -->
+        <h3>3 Messages</h3>
+        <p> <strong>17th May 2009</strong> by Admin<br />
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. <small><a href="#" class="remove-link" title="Remove message">Remove</a></small> </p>
+        <p> <strong>2nd May 2009</strong> by Jane Doe<br />
+          Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est. <small><a href="#" class="remove-link" title="Remove message">Remove</a></small> </p>
+        <p> <strong>25th April 2009</strong> by Admin<br />
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. <small><a href="#" class="remove-link" title="Remove message">Remove</a></small> </p>
+        <form action="#" method="post">
+          <h4>New Message</h4>
+          <fieldset>
+          <textarea class="textarea" name="textfield" cols="79" rows="5"></textarea>
+          </fieldset>
+          <fieldset>
+          <select name="dropdown" class="small-input">
+            <option value="option1">Send to...</option>
+            <option value="option2">Everyone</option>
+            <option value="option3">Admin</option>
+            <option value="option4">Jane Doe</option>
+          </select>
+          <input class="button" type="submit" value="Send" />
+          </fieldset>
+        </form>
+      </div>
+      <!-- End #messages -->
+    </div>
+  </div>
+  <!-- End #sidebar -->
   <div id="main-content">
     <!-- Main Content Section with everything -->
     <noscript>
@@ -284,4 +387,7 @@
     <!-- End #footer -->
   </div>
   <!-- End #main-content -->
-<% include footer %>
+</div>
+</body>
+<!-- Download From www.exet.tk-->
+</html>
