--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/admin/css/invalid.css" type="text/css" media="screen" />
 <!--                       Javascripts                       -->
 <!-- jQuery -->
-<script type="text/javascript" src="/admin/js/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="/admin/js/jquery.min.js"></script>
 <!-- jQuery Configuration -->
 <script type="text/javascript" src="/admin/js/simpla.jquery.configuration.js"></script>
 <!-- Facebox jQuery Plugin -->
@@ -28,9 +28,13 @@
   <!-- End #logn-top -->
   <div id="login-content">
     <form action="login" method="POST">
+      <% if (msg) { %>
       <div class="notification information png_bg">
-        <div> 消息提醒</div>
+      	<div>  <%= msg %> </div>
       </div>
+      <% }else { %>  
+      <div style="height:54px"></div>
+      <% } %>     
       <p>
         <label>用户名 :</label>
         <input class="text-input" name="username" type="text" />
@@ -42,7 +46,7 @@
       </p>
       <div class="clear"></div>
       <p id="remember-password">
-        <input type="checkbox" name="savePassword" />
+        <input type="checkbox" name="savePassword" disabled="disabled" />
         记住密码 </p>
       <div class="clear"></div>
       <p>
